--- a/app/views/recidivas/_diagnosticos.html.erb
+++ b/app/views/recidivas/_diagnosticos.html.erb
@@ -1,14 +1,14 @@
 <table class="card striped responsive-table">
   <thead>
-  <tr>
-    <th>Tipo</th>
-  </tr>
+  <th>
+    Diagnóstico
+  </th>
   </thead>
 
   <tbody>
-  <% exames.each do |e| %>
+  <% dados.each do |e| %>
       <tr>
-        <td><%= e.dermatologica %></td>
+        <td><%= e.diagnostico %></td>
 
       </tr>
   <% end %>
