--- a/app/views/recidivas/_form.html.erb
+++ b/app/views/recidivas/_form.html.erb
@@ -86,6 +86,37 @@
           </div>
         </div>
 
+        <div class="card">
+          <div class="card-content">
+            <span class="card-title">Episódios Relacionais durante o tratamento</span>
+            <%= f.fields_for :epidosios_reacionais_recidivas do |esq| %>
+                <div class="row">
+                  <div class="col s6 l2 input">
+                    <%= esq.label :tipo, "Tipo" %>
+                    <%= esq.select :tipo, @episodios_reacionais,{promot: true}, {class:"browser-default select2"} %>
+
+
+                  </div>
+                  <div class="col s6 l2 input-field">
+
+                    <%= esq.label :numero_episodios, "Número de Episódios" %>
+                    <%= esq.number_field :numero_episodios %>
+                  </div>
+                  <div class="col s12 l3 input-field">
+                    <%= esq.label :conduta_mendicamentosa,"condutas Mendicamentosa" %>
+                    <%= esq.text_field :conduta_mendicamentosa %>
+                  </div>
+                  <div class="col s4 l1">
+                    <%= esq.link_to_remove "Remover" %>
+                  </div>
+                </div>
+            <% end %>
+          </div>
+          <div class="card-action">
+            <%= f.link_to_add "Novo Episódio Reacional", :epidosios_reacionais_recidivas %>
+          </div>
+        </div>
+
         <div class="row">
           <div class="input-field col s12 l3">
 
@@ -188,36 +219,6 @@
 
           </div>
 
-          <div class="card">
-            <div class="card-content">
-              <span class="card-title">Episódios Relacionais durante o tratamento</span>
-              <%= f.fields_for :epidosios_reacionais_recidivas do |esq| %>
-                  <div class="row">
-                    <div class="col s6 l2 input-field">
-
-                      <%= esq.select :tipo, @episodios_reacionais %>
-                      <%= esq.label :tipo, "Tipo" %>
-
-                    </div>
-                    <div class="col s6 l2 input-field">
-
-                      <%= esq.label :numero_episodios, "Número de Episódios" %>
-                      <%= esq.number_field :numero_episodios %>
-                    </div>
-                    <div class="col s12 l3 input-field">
-                      <%= esq.label :conduta_mendicamentosa,"condutas Mendicamentosa" %>
-                      <%= esq.text_field :conduta_mendicamentosa %>
-                    </div>
-                    <div class="col s4 l1">
-                      <%= esq.link_to_remove "Remover" %>
-                    </div>
-                  </div>
-              <% end %>
-            </div>
-            <div class="card-action">
-              <%= f.link_to_add "Novo Episódio Reacional", :epidosios_reacionais_recidivas %>
-            </div>
-          </div>
 
         </div>
 
@@ -512,7 +513,7 @@
 
           <div class="input col s12 l4">
 
-            <%= f.label :forma_clinica_alta,"Forma Clínica" %>
+            <%= f.label :forma_clinica_suspeita,"Forma Clínica" %>
             <%= f.select :forma_clinica_suspeita, @formas_clinicas, {prompt: true},{class:"browser-default select2"} %>
 
 
