timeout para carregamento do canvas

--- a/app/views/avaliacao_sensitivas/_form.html.erb
+++ b/app/views/avaliacao_sensitivas/_form.html.erb
@@ -221,7 +221,7 @@
         $('#modal_marcacoes').openModal();
     }
 
-    $(document).ready(function()
+    function carregar() //$(document).ready(function()
     {
         //Mão Direita
         var mao_direita = document.getElementById("mao_direita");
@@ -865,7 +865,7 @@
       }
   }
 
-
+setTimeout(carregar,1000);
 
 
 </script>
