--- a/app/views/notificacaos/_form.html.erb
+++ b/app/views/notificacaos/_form.html.erb
@@ -103,7 +103,7 @@
               <div class="row">
                 <div class="col s4 input">
                   <%= esq.label :medicamento_id, "Medicamento" %>
-                  <%= esq.select :medicamento_id, @medicamentos, {prompt: true}, {class:"browser-default chosen-select"} %>
+                  <%= esq.select :medicamento_id, @medicamentos, {prompt: true}, {class:"browser-default select2"} %>
 
                 </div>
                 <div class="col s4 input-field">
