--- a/app/views/layouts/_left_sidebar.html.erb
+++ b/app/views/layouts/_left_sidebar.html.erb
@@ -73,22 +73,22 @@
             </li>
             <li class="bold">
               <a href="/dermatologicas" class="waves-effect waves-cyan">
-                <i class="fa fa-map-marker"></i> Sinais Dermatológicos
+                <i class="fa fa-list"></i> Sinais Dermatológicos
               </a>
             </li>
             <li class="bold">
               <a href="/sinais_sintomas" class="waves-effect waves-cyan">
-                <i class="fa fa-map-marker"></i> Sinais e Sintomas
+                <i class="fa fa-list"></i> Sinais e Sintomas
               </a>
             </li>
             <li class="bold">
               <a href="/diagnosticos" class="waves-effect waves-cyan">
-                <i class="fa fa-map-marker"></i> Diagnósticos
+                <i class="fa fa-list"></i> Diagnósticos
               </a>
             </li>
             <li class="bold">
               <a href="/condutas" class="waves-effect waves-cyan">
-                <i class="fa fa-map-marker"></i> Condutas
+                <i class="fa fa-list"></i> Condutas
               </a>
             </li>
 
