--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,7 @@
-<h2>Registro</h2>
+<div style="min-width: 350px">
+<h4 class="center">Registro</h4>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: "login-form"}) do |f| %>
   <%= devise_error_messages! %>
 
     <div class="field">
@@ -35,4 +36,5 @@
     <%= f.submit "Registrar", class:"btn" %>
   </div>
 <% end %>
-
+<p>&nbsp;</p>
+</div>
