--- a/app/views/recidivas/show.html.erb
+++ b/app/views/recidivas/show.html.erb
@@ -236,13 +236,13 @@
 
           </div>
 
-          <div class="card">
+          <!--<div class="card">
             <div class="card-content">
               <span class="card-title">Conduta</span>
-              <%= render partial: "condutas", locals:{dados: @recidiva.conduta_recidivas} %>
+              <%#= render partial: "condutas", locals:{dados: @recidiva.conduta_recidivas} %>
             </div>
 
-          </div>
+          </div>-->
 
         </div>
 
