--- a/app/views/recidivas/_form.html.erb
+++ b/app/views/recidivas/_form.html.erb
@@ -494,7 +494,7 @@
                       <%#= esq.link_to_remove "Remover" %>
                     </div>
                   </div>
-              <% end %>
+              <%# end %>
             </div>
             <div class="card-action">
               <%#= f.link_to_add "Nova Conduta", :conduta_recidivas %>
